[package]
name = "l6disk"
version = "0.0.1"
edition = "2021"
description = "Level6 diskette image utility"
authors = ["Sergio Carmine 4CITI <me@sergiocarmi.net>"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
